styles/home.module.css
/* Cursor animation */

.cursor::after {
  display: block;
  content: '';
  position: absolute;
  width: 4px;
  height: 100%;
  background-color: #fff;
  animation: cursor .6s linear infinite alternate;
  will-change: opacity;
}

@keyframes cursor {
  0%, 40% {
    opacity: 1;
  }

  60%, 100% {
    opacity: 0;
  }
}

/* Logo animation */

/***************************************************
 * Generated by SVG Artista on 3/25/2021, 2:10:58 PM
 * MIT license (https://opensource.org/licenses/MIT)
 * W. https://svgartista.net
 **************************************************/

.logoSvg {
  stroke-dashoffset: 2526.631103515625px;
  stroke-dasharray: 2526.631103515625px;
  fill: transparent;
  transition: stroke-dashoffset 1.2s cubic-bezier(0.47, 0, 0.745, 0.715) 0s,
    fill 0.85s cubic-bezier(0.47, 0, 0.745, 0.715) 0.6s;
}

.active .logoSvg {
  stroke-dashoffset: 0;
  fill: currentColor;
}

.logotypeSvg {
  transform-origin: right;
}

@media all and (max-width: 520px) {
  .logotypeSvg {
    transform: scale(0.7) translateX(30px);
  }
}

/* ----------------------------------------------
 * Generated by Animista on 2021-3-26 14:40:37
 * Licensed under FreeBSD License.
 * See http://animista.net/license for more info.
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation rotate-scale-up
 * ----------------------------------------
 */

.rotateScaleUp:hover {
  -webkit-animation: rotate-scale-up 0.85s linear both;
  animation: rotate-scale-up 0.85s linear both;
}

@-webkit-keyframes rotate-scale-up {
  0% {
    -webkit-transform: scale(1) rotateZ(0);
            transform: scale(1) rotateZ(0);
  }
  50% {
    -webkit-transform: scale(2) rotateZ(180deg);
            transform: scale(2) rotateZ(180deg);
  }
  100% {
    -webkit-transform: scale(1) rotateZ(360deg);
            transform: scale(1) rotateZ(360deg);
  }
}
@keyframes rotate-scale-up {
  0% {
    -webkit-transform: scale(1) rotateZ(0);
            transform: scale(1) rotateZ(0);
  }
  50% {
    -webkit-transform: scale(2) rotateZ(180deg);
            transform: scale(2) rotateZ(180deg);
  }
  100% {
    -webkit-transform: scale(1) rotateZ(360deg);
            transform: scale(1) rotateZ(360deg);
  }
}


/* Fade */

.fadeupEnter {
	opacity: 0.01;
	transform: translateY(20px);
	transition: opacity 300ms var(--easing),transform 300ms var(--easing);
}

/* Helpers */

.highlight {
  @apply border-b-2 border-brand-accent;
}

.hSection {
  @apply relative w-full px-4 pb-32 mx-auto overflow-hidden;
  content-visibility: auto;
  contain-intrinsic-size: 1px 1000px;
}

.pExp {
  @apply mt-0 mb-2 text-sm font-semibold text-indigo-300;
}

@screen md {
  .hSection {
    @apply max-w-3xl px-6;
  }
}

@screen 2xl {
  .hSection {
    @apply max-w-6xl;
  }
}

